# Application/App/Response/Authentication/SignIn/WrongSignInFields.php
@@ -1,40 +1,0 @@
-<?php
-
-namespace SPHERE\Application\App\Response\Authentication\SignIn;
-
-use SPHERE\Application\App\Response\Code\Response401;
-use Symfony\Component\HttpFoundation\Request;
-
-/**
- *
- */
-class WrongSignInFields extends Response401
-{
-    public function __construct()
-    {
-        $content = [
-            'behaviour' => 'sign-in',
-            'url' => '/app/authentication/process/sign-in',
-            'method' => Request::METHOD_POST,
-            'provide' => [
-                'deviceIdentifier' => [
-                    'type' => 'string'
-                ]
-            ],
-            'prompt' => [
-                'credentialIdentifier' => [
-                    'label' => 'Benutzername',
-                    'type' => 'string'
-                ],
-                'credentialPassword' => [
-                    'label' => 'Passwort',
-                    'type' => 'string',
-                    'sensitive' => true
-                ]
-            ]
-        ];
-
-        parent::__construct($content);
-    }
-
-}
